# sdk-wrapper-demo-game

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindGalaxy.cmake  FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  FindSteamworks.cmake
lib/SDL2_gfx/lib/x64/: SDL2_gfx.lib
res/: GalaxyConfig.json  GalaxyPeer.ini
src/engine/: CMakeLists.txt  SDLRenderer.cc  SDLRenderer.h  SDLWindow.cc  SDLWindow.h
src/game/: Application.cc  Application.h  CMakeLists.txt  Main.cc  SWDemo.cc  SWDemo.h
src/game/gui/: Button.cc  Button.h  TextInput.cc  TextInput.h  TextLink.cc  TextLink.h  TextOutputDisplay.cc  TextOutputDisplay.h
src/game/scenes/: AchievementsView.cc  AchievementsView.h  FriendsView.cc  FriendsView.h  GameState.h  LeaderboardsVIew.cc  LeaderboardsVIew.h  LobbyMenuView.cc  LobbyMenuView.h  LobbyView.cc  LobbyView.h  StartMenu.cc  StartMenu.h  StatsView.cc  StatsView.h
src/game/steam/: Friends.cc  Friends.h  Leaderboards.cc  Leaderboards.h  Lobby.cc  Lobby.h  StatsAndAchievements.cc  StatsAndAchievements.h  StatsAndAchievementsData.h
